# kamping

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  AUTHORS  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  DockerfileHOWTO  Doxyfile  README.md  aggregated__tree__node_8hpp.html  aggregated__tree__node_8hpp.js  aggregated__tree__node_8hpp__dep__incl.map  aggregated__tree__node_8hpp__dep__incl.md5  aggregated__tree__node_8hpp__incl.map  aggregated__tree__node_8hpp__incl.md5  aggregated__tree__node_8hpp_source.html  allgather_8hpp_source.html  allocator_8hpp_source.html  allreduce_8hpp_source.html  alltoall_8hpp_source.html  alltoall__dispatch_8hpp.html  alltoall__dispatch_8hpp.js  alltoall__dispatch_8hpp__incl.map  alltoall__dispatch_8hpp__incl.md5  alltoall__dispatch_8hpp_source.html  alltoall__grid_8hpp.html  alltoall__grid_8hpp.js  alltoall__grid_8hpp__dep__incl.map  alltoall__grid_8hpp__dep__incl.md5  alltoall__grid_8hpp__incl.map  alltoall__grid_8hpp__incl.md5  alltoall__grid_8hpp_source.html  alltoall__sparse_8hpp.html  alltoall__sparse_8hpp.js  alltoall__sparse_8hpp__dep__incl.map  (+1513 more)
docs/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  architecture.md  coding-guidelines.md  coding_guidelines.md  contributing.md  contribution_guidelines.md  documentation-guidlines.md  documentation_guidelines.md  helmholtz_rsd_readme.md  kamping_types_readme.dox  main.dox  named_parameters.md  parameter_handling.md  requirements.org  resize_policy.dox  testing_guidelines.md
docs/custom_doxygen/: custom.css  delete_me.css  footer.html  header.html
docs/guidelines/: coding_guidelines.md  contribution_guidelines.md  documentation_guidelines.md  release_guidelines.md
docs/user_guides/: communicator.md  user_guide_main.md
examples/: CMakeLists.txt  alltoall_example.cpp  example.cpp  examples_named_parameter_selection.cpp  examples_reduce.cpp  gather_example.cpp  helpers_for_examples.hpp  named_parameter_selection_example.cpp  quicksort_example.cpp  reduce_example.cpp  scatter_example.cpp  top_k_reduce.cpp
examples/applications/: CMakeLists.txt  fault_tolerance.cpp  grid_alltoall_plugin.cpp  my_num_numa_nodes_plugin.cpp  sparse_all_to_all_example.cpp  top_k_reduce_example.cpp  ulfm.cpp
examples/usage/: CMakeLists.txt  adapter_example.cpp  allgather_example.cpp  allgatherv_example.cpp  alltoall_example.cpp  alltoallv_adapter_example.cpp  alltoallv_dispatch_example.cpp  alltoallv_example.cpp  alltoallv_sparse_example.cpp  bcast_example.cpp  datatype_example.cpp  gather_example.cpp  gatherv_example.cpp  helpers_for_examples.hpp  info_example.cpp  kokkos_example.cpp  mdspan_example.cpp  named_parameter_selection_example.cpp  paper_example.cpp  recv_example.cpp  reduce_example.cpp  request_pool_example.cpp  scatter_example.cpp  sendrecv_adapter_example.cpp  sendrecv_example.cpp  serialization_example.cpp  timer_example.cpp
examples/v2/: CMakeLists.txt  send_recv_example.cpp
kamping-types/: CMakeLists.txt  README.md
kamping-types/examples/: CMakeLists.txt  type_traits_example.cpp
tests/: CMakeLists.txt  KaTestrophe.cmake  KampingTestHelper.cmake  allocator_test.cpp  checking_casts_test.cpp  communication_graph_test.cpp  data_buffer_compilation_failures_test.cpp  data_buffer_test.cpp  demo_test.cpp  demo_test_mpi.cpp  distributed_graph_communicator_test.cpp  environment_init_finalize_if_necessary_test.cpp  environment_init_finalize_test.cpp  environment_test.cpp  example.cpp  examples_from_paper_test.cpp  gtest_helpers.hpp  has_member_test.cpp  helpers_for_testing.hpp  helpers_for_testing_mpi_test.cpp  helpers_for_testing_test.cpp  hooks_test.cpp  implementation_helpers_test.cpp  kassert_compilation_failures_test.cpp  kassert_test.cpp  legacy_parameter_objects.hpp  mpi-gtest-main.cpp  mpi_communicator_is_same_on_all_pes_compilation_failure_test.cpp  mpi_communicator_is_same_on_all_pes_test.cpp  mpi_communicator_is_same_on_all_ranks_compilation_failure_test.cpp  mpi_communicator_is_same_on_all_ranks_test.cpp  mpi_communicator_test.cpp  mpi_datatype_test.cpp  mpi_datatype_unsupported_types_test.cpp  mpi_function_wrapper_helpers_compilation_failures_test.cpp  mpi_function_wrapper_helpers_test.cpp  mpi_gather_test.cpp  mpi_group_test.cpp  mpi_gtest_main.cpp  mpi_operation_wrapper_test.cpp  (+56 more)
tests/cmake/: KaTestrophe.cmake  KampingTestHelper.cmake  MPIGoogleTest.cmake  MPIGoogleTestAddTests.cmake
tests/collectives/: gatherv_test_helpers.hpp  mpi_allgather_compilation_failure_test.cpp  mpi_allgather_test.cpp  mpi_allgatherv_compilation_failure_test.cpp  mpi_allgatherv_test.cpp  mpi_allreduce_compilation_failure_test.cpp  mpi_allreduce_test.cpp  mpi_alltoall_compilation_failure_test.cpp  mpi_alltoall_sparse_test.cpp  mpi_alltoall_test.cpp  mpi_alltoallv_compilation_failure_test.cpp  mpi_alltoallv_test.cpp  mpi_barrier_test.cpp  mpi_bcast_compilation_failure_test.cpp  mpi_bcast_test.cpp  mpi_exscan_compilation_failure_test.cpp  mpi_exscan_test.cpp  mpi_gather_compilation_failure_test.cpp  mpi_gather_test.cpp  mpi_gatherv_compilation_failure_test.cpp  mpi_gatherv_test.cpp  mpi_iallreduce_test.cpp  mpi_ibarrier_test.cpp  mpi_recv_test.cpp  mpi_reduce_compilation_failure_test.cpp  mpi_reduce_test.cpp  mpi_scan_compilation_failure_test.cpp  mpi_scan_test.cpp  mpi_scatter_compilation_failure_test.cpp  mpi_scatter_test.cpp  mpi_scatterv_compilation_failure_test.cpp  mpi_scatterv_test.cpp  mpi_send_test.cpp
tests/comm_helper/: mpi_communicator_is_same_on_all_ranks_compilation_failure_test.cpp  mpi_communicator_is_same_on_all_ranks_test.cpp
tests/cpp20/: std_span_alltoallv_test.cpp
tests/measurements/: measurement_test_helpers.hpp  measurement_utils_test.cpp  mpi_counter_test.cpp  mpi_measurement_utils_test.cpp  mpi_timer_test.cpp
tests/multiple_compilation_units_test/: gatherer.cpp  gatherer.hpp  main.cpp
tests/p2p/: mpi_iprobe_test.cpp  mpi_irecv_test.cpp  mpi_isend_compilation_failure_test.cpp  mpi_isend_test.cpp  mpi_probe_test.cpp  mpi_recv_compilation_failure_test.cpp  mpi_recv_test.cpp  mpi_send_compilation_failure_test.cpp  (+3 more)
(+425 files in other folders)
