add_executable(example_named_parameter_selection named_parameter_selection_example.cpp)
target_link_libraries(example_named_parameter_selection kamping)
target_compile_options(example_named_parameter_selection PRIVATE ${KAMPING_WARNING_FLAGS})

add_executable(example_reduce reduce_example.cpp)
target_link_libraries(example_reduce kamping)
target_compile_options(example_reduce PRIVATE ${KAMPING_WARNING_FLAGS})

add_executable(example_alltoall alltoall_example.cpp)
target_link_libraries(example_alltoall kamping)
target_compile_options(example_alltoall PRIVATE ${KAMPING_WARNING_FLAGS})

add_executable(example_gather gather_example.cpp)
target_link_libraries(example_gather kamping)
target_compile_options(example_gather PRIVATE ${KAMPING_WARNING_FLAGS})
